// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuestionTextWithInfoComponent should not show control link and question details for TEXT questions 1`] = `
<tm-question-text-with-info
  FeedbackQuestionType={[Function Object]}
  __ngContext__={[Function Number]}
  additionalInfoIsExpanded="false"
  downloadQuestionResultEvent={[Function EventEmitter_]}
  questionDetails={[Function Object]}
  questionNumber="0"
  shouldShowDownloadQuestionResult="false"
>
  <span
    class="d-flex flex-column flex-sm-row align-items-sm-center"
  >
    <h2
      class="question-number"
    >
       Question 0: 
    </h2>
    <span
      class="question-text mx-sm-2"
    >
      Text question details
    </span>
  </span>
</tm-question-text-with-info>
`;

exports[`QuestionTextWithInfoComponent should show control link when question type is not TEXT 1`] = `
<tm-question-text-with-info
  FeedbackQuestionType={[Function Object]}
  __ngContext__={[Function Number]}
  additionalInfoIsExpanded="false"
  downloadQuestionResultEvent={[Function EventEmitter_]}
  questionDetails={[Function Object]}
  questionNumber="0"
  shouldShowDownloadQuestionResult="false"
>
  <span
    class="d-flex flex-column flex-sm-row align-items-sm-center"
  >
    <h2
      class="question-number"
    >
       Question 0: 
    </h2>
    <span
      class="question-text mx-sm-2"
    >
      MCQ question details
    </span>
    <button
      class="additional-info-button info-font-size me-auto border-0 p-0 bg-transparent text-primary"
    >
       [more] 
    </button>
  </span>
</tm-question-text-with-info>
`;

exports[`QuestionTextWithInfoComponent should show question detail when click control link 1`] = `
<tm-question-text-with-info
  FeedbackQuestionType={[Function Object]}
  __ngContext__={[Function Number]}
  additionalInfoIsExpanded={[Function Boolean]}
  downloadQuestionResultEvent={[Function EventEmitter_]}
  questionDetails={[Function Object]}
  questionNumber="0"
  shouldShowDownloadQuestionResult="false"
>
  <span
    class="d-flex flex-column flex-sm-row align-items-sm-center"
  >
    <h2
      class="question-number"
    >
       Question 0: 
    </h2>
    <span
      class="question-text mx-sm-2"
    >
      MCQ question details
    </span>
    <button
      class="additional-info-button info-font-size me-auto border-0 p-0 bg-transparent text-primary"
    >
       [less] 
    </button>
  </span><div
    class="additional-info info-font-size"
  >
    <tm-mcq-question-additional-info>
      Multiple-choice (single answer) question options:
      <ul>
        <li>
          a
        </li>
        <li>
          b
        </li>
      </ul>
    </tm-mcq-question-additional-info>
  </div>
</tm-question-text-with-info>
`;
